# llm-fine-tune

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  RESULTS.md  main.py  pyproject.toml  tokenizer-sources.txt
dataset_card/: README.md
docker/execution-harness/: Dockerfile
eval-envs/bigcode-gen/: pyproject.toml
eval-envs/lmeval/: pyproject.toml
scripts/: diagnose_assembly.py  verify-engines
src/llm_fine_tune/: analyze_tokenizer_fertility.py  build_dataset.py  build_instruct_dataset.py  loaders.py  upload_dataset.py
src/llm_fine_tune/dataset/: build_base_dataset.py  build_evaluation_dataset.py  build_instruct_dataset.py  instruction_generator.py  newfacade_source.py  source_cache.py  source_newfacade.py  source_walkccc.py  sources.py  splits.py  upload_dataset.py
src/llm_fine_tune/dataset/quality/: audit_cross_source.py  exclusions.json  test_assertion_parser.py  validate_expected_translations.py
src/llm_fine_tune/evaluation/: README.md  benchmark_report.py  compute_heldout_perplexity.py  custom_bigcode_tasks.py  execution.py  extract_code_snippet_from_llm_response.py  generate_code_benchmark.py  generate_llm_responses.py  generation.py  metrics.py  report.py  run_bigcode_cli.py  run_code_benchmark_scoring.py  run_execution_scoring.py  score.py
src/llm_fine_tune/evaluation/hpc/goethe/: evaluation_image.def  submit-benchmark-setup.sh  submit-benchmark.sh  submit-evaluation-setup.sh  submit-evaluation.sh
src/llm_fine_tune/execution_harness/: datatypes.py  execution.py
src/llm_fine_tune/finetune/: README.md  dataset_info.json
src/llm_fine_tune/finetune/configs/: gemma-3-1b-it-lora.yaml  gemma-3-1b-it-merge.yaml  gemma-3-4b-it-lora.yaml  gemma-3-4b-it-merge.yaml  gpt-oss-20b-lora.yaml  llama-3.2-1b-lora.yaml  llama-3.2-1b-merge.yaml  mistral-7b-v0.3-lora.yaml  mistral-7b-v0.3-merge.yaml  qwen-3.5-0.8b-lora.yaml  qwen-3.5-0.8b-merge.yaml  qwen2.5-coder-1.5b-lora.yaml  qwen2.5-coder-1.5b-merge.yaml
src/llm_fine_tune/finetune/hpc/: common.sh
src/llm_fine_tune/finetune/hpc/goethe/: README.md  env.sh  setup.sh  submit-merge-and-publish.sh  submit-merge.sh  submit-rebuild-env.sh  submit-setup.sh  submit-test.sh  submit.sh
src/llm_fine_tune/finetune/scripts/: cluster-setup.sh  submit-finetune-test.sh  submit-finetune.sh  submit-setup.sh
src/llm_fine_tune/publish/: update_model_cards.py  upload_model.py
src/llm_fine_tune/publish/model_card/: README.md  gemma-3-1b-it.md  gemma-3-4b-it.md  llama-3.2-1b.md  mistral-7b-v0.3.md  qwen-3.5-0.8b.md  qwen2.5-coder-1.5b.md
src/llm_fine_tune/tokenizer/: analyze_tokenizer_fertility.py
tests/: test_build_evaluation_dataset.py  test_code_benchmark_assembly.py  test_compile_and_run_self_checking.py  test_newfacade_matching.py  test_splits.py  test_supported_language_datatypes.py  test_test_assertion_parser.py
