[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-fine-tune"
version = "0.4.0"
description = "End-to-end pipeline for fine-tuning an open LLM on a custom code dataset"
readme = "README.md"
# capped at <3.13: ROCm 6.2 torch wheels only exist for cp39–cp312
requires-python = ">=3.11,<3.13"
dependencies = [
    "polars>=1.0.0",
    "huggingface-hub>=0.32.0",
    "transformers>=4.55.0",
    "datasets>=4.0.0",
]

[project.scripts]
build-base-dataset = "llm_fine_tune.dataset.build_base_dataset:main"
build-instruct-dataset = "llm_fine_tune.dataset.build_instruct_dataset:main"
publish-dataset = "llm_fine_tune.dataset.upload_dataset:main"
analyze-tokenizer-fertility = "llm_fine_tune.tokenizer.analyze_tokenizer_fertility:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_fine_tune"]

[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "commitizen>=3.0.0",
    "ipykernel>=7.2.0",
    "pandas>=2.0",
    "pyarrow>=24.0.0",
    "matplotlib>=3.10.9",
]
# Cluster-only. Do NOT run `uv sync --group finetune` locally —
# the ROCm torch wheel installs but will fail to import without AMD GPU drivers.
finetune = [
    "torch>=2.5; sys_platform == 'linux'",
    # torchvision must be a direct dep — uv only routes [tool.uv.sources] indexes
    # for direct deps, not transitive ones; without this it pulls a CPU/CUDA build
    # from PyPI and mismatches with the ROCm torch wheel
    "torchvision; sys_platform == 'linux'",
    # uv only routes [tool.uv.sources] indexes for direct deps, not transitive ones
    "pytorch-triton-rocm>=3.1.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "llamafactory @ git+https://github.com/hiyouga/LLaMA-Factory.git; sys_platform == 'linux'",
]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
torchvision = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true
