[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-fine-tune"
version = "1.2.0"
description = "End-to-end pipeline for fine-tuning an open LLM on a custom code dataset"
readme = "README.md"
# capped at <3.13: ROCm 6.2 torch wheels only exist for cp39–cp312
requires-python = ">=3.11,<3.13"
dependencies = [
    "polars>=1.0.0",
    "huggingface-hub>=0.32.0",
    "transformers>=4.55.0",
    "datasets>=4.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
build-base-dataset = "llm_fine_tune.dataset.build_base_dataset:main"
build-instruct-dataset = "llm_fine_tune.dataset.build_instruct_dataset:main"
build-evaluation-dataset = "llm_fine_tune.dataset.build_evaluation_dataset:main"
publish-dataset = "llm_fine_tune.dataset.upload_dataset:main"
publish-model = "llm_fine_tune.publish.upload_model:main"
analyze-tokenizer-fertility = "llm_fine_tune.tokenizer.analyze_tokenizer_fertility:main"
run-bigcode-cli = "llm_fine_tune.evaluation.run_bigcode_cli:main"
run-execution-scoring = "llm_fine_tune.evaluation.run_execution_scoring:main"
evaluation-report = "llm_fine_tune.evaluation.report:main"
validate-expected-translations = "llm_fine_tune.dataset.quality.validate_expected_translations:main"
audit-cross-source = "llm_fine_tune.dataset.quality.audit_cross_source:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_fine_tune"]

[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "commitizen>=3.0.0",
    "ipykernel>=7.2.0",
    "pandas>=2.0",
    "pyarrow>=24.0.0",
    "matplotlib>=3.10.9",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
# Cluster-only extras. Do NOT run `uv sync --extra rocm` or `--extra cuda` locally —
# torch wheels install but fail to import without GPU drivers.
# torch, torchvision, torchaudio must be listed as direct deps so uv applies the
# [tool.uv.sources] index routing (only direct deps get routed, not transitive ones).
#
# AMD / ROCm (e.g. Goethe MI210):    uv sync --extra rocm
rocm = [
    "llm-fine-tune[finetune]",
    "torch>=2.6; sys_platform == 'linux'",
    "torchvision; sys_platform == 'linux'",
    "torchaudio; sys_platform == 'linux'",
    "pytorch-triton-rocm>=3.1.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
# NVIDIA / CUDA (e.g. any CUDA cluster): uv sync --extra cuda
cuda = [
    "llm-fine-tune[finetune]",
    "torch>=2.5; sys_platform == 'linux'",
    "torchvision; sys_platform == 'linux'",
    "torchaudio; sys_platform == 'linux'",
]
# Shared finetune stack — pulled in by both rocm and cuda above.
finetune = [
    "llamafactory @ git+https://github.com/hiyouga/LLaMA-Factory.git",
]
# Evaluation stack. Install on Goethe only (bigcode-eval pulls heavy deps).
# Pin the commit after Milestone 3 setup is verified on the cluster.
evaluation = [
    "bigcode-eval @ git+https://github.com/bigcode-project/bigcode-evaluation-harness.git",
]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
conflicts = [[{ extra = "rocm" }, { extra = "cuda" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", extra = "rocm" },
    { index = "pytorch-cuda", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-rocm", extra = "rocm" },
    { index = "pytorch-cuda", extra = "cuda" },
]
torchaudio = [
    { index = "pytorch-rocm", extra = "rocm" },
    { index = "pytorch-cuda", extra = "cuda" },
]
pytorch-triton-rocm = [{ index = "pytorch-rocm", extra = "rocm" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true

[[tool.uv.index]]
# CUDA version — confirm via `nvidia-smi` on the NVIDIA cluster before first use.
# cu124 covers CUDA 12.4 (common on A100/H100 nodes as of 2025-2026).
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
