# Isolated, declarative env for bigcode-evaluation-harness *generation* (GPU, ROCm).
# Synced on the cluster with: uv sync --project eval-envs/bigcode-gen
# Run with:                    uv run --project eval-envs/bigcode-gen python "$BIGCODE_REPO/main.py" ...
# (main.py is a repo-root script not exposed by the package, so the repo is also cloned separately.)
# Kept out of the training .venv — bigcode's transformers pin must not touch llamafactory.
[project]
name = "bigcode-gen-env"
version = "0"
description = "bigcode-evaluation-harness generation on ROCm (HumanEval, MultiPL-E)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "bigcode_eval @ git+https://github.com/bigcode-project/bigcode-evaluation-harness.git",
    # Direct so the ROCm index routing below applies (bigcode pulls torch only transitively).
    "torch",
    # bigcode's own transformers pin can predate Qwen2.5-Coder's architecture; force one new
    # enough to load it. If bigcode hard-pins an incompatible `==`, relax it there instead.
    "transformers>=4.45",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
