# Isolated, declarative env for bigcode-evaluation-harness *generation* (GPU, ROCm).
# Synced on the cluster with: uv sync --project eval-envs/bigcode-gen
# Run with:                    uv run --project eval-envs/bigcode-gen python "$BIGCODE_REPO/main.py" ...
# (main.py is a repo-root script not exposed by the package, so the repo is also cloned separately.)
# Kept out of the training .venv — bigcode's transformers pin must not touch llamafactory.
[project]
name = "bigcode-gen-env"
version = "0"
description = "bigcode-evaluation-harness generation on ROCm (HumanEval, MultiPL-E)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "bigcode_eval @ git+https://github.com/bigcode-project/bigcode-evaluation-harness.git",
    # torch listed direct so the ROCm index source (below) applies; its *version* is forced
    # by override-dependencies (bigcode pins torch==2.0.1, which has no ROCm 6.2.4 wheel).
    "torch",
]

[tool.uv]
package = false
# bigcode hard-pins torch==2.0.1 and a pre-Qwen2.5 transformers. A direct dep can't override a
# transitive `==` pin, but override-dependencies can: force torch to a version the ROCm 6.2.4
# index actually carries, and transformers to one that knows the Qwen2.5-Coder architecture.
# If another bigcode pin (numpy, accelerate, datasets) conflicts after this, add it here too.
override-dependencies = ["torch>=2.6", "transformers>=4.45"]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
