# Isolated, declarative env for bigcode-evaluation-harness *generation* (GPU, ROCm).
# Synced on the cluster with: uv sync --project eval-envs/bigcode-gen
# Run with:                    uv run --project eval-envs/bigcode-gen python "$BIGCODE_REPO/main.py" ...
# (main.py is a repo-root script not exposed by the package, so the repo is also cloned separately.)
# Kept out of the training .venv — bigcode's transformers pin must not touch llamafactory.
[project]
name = "bigcode-gen-env"
version = "0"
description = "bigcode-evaluation-harness generation on ROCm (HumanEval, MultiPL-E)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "bigcode_eval @ git+https://github.com/bigcode-project/bigcode-evaluation-harness.git",
    # torch + its ROCm triton sidecar listed direct so the ROCm index source (below) applies —
    # uv does NOT route transitive deps and the index is explicit, so an unlisted triton (which
    # torch==*+rocm requires) can't be found. torch's version is forced by override-dependencies.
    "torch",
    "pytorch-triton-rocm>=3.1.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv]
package = false
# bigcode hard-pins torch==2.0.1 and a pre-Qwen2.5 transformers. A direct dep can't override a
# transitive `==` pin, but override-dependencies can: force torch to a version the ROCm 6.2.4
# index actually carries, and transformers to one that knows the Qwen2.5-Coder architecture.
# datasets<3 so bigcode can still load legacy bare dataset names (e.g. "openai_humaneval");
# datasets 3+/4+ demand "namespace/name" URIs and break bigcode's task loaders.
# If another bigcode pin (numpy, accelerate) conflicts after this, add it here too.
override-dependencies = ["torch>=2.6", "transformers>=4.45", "datasets<3"]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
